--- a/styles.css
+++ b/styles.css
@@ -2,3 +2,48 @@ h1{
     background-color: red;
     color: yellow;
 }
+.header{
+    display: flex;
+    justify-content: space-between;
+    border: 1px solid black;
+        height: 100px;
+
+}
+.logo{
+    height: 100px;
+    width: 100px;
+    /* padding: 10px; */
+}
+.navitems >ul{
+    display: flex;
+}
+.navitems >ul>li{
+   padding: 10px;
+   margin: 10px;
+}
+.rescard{
+    width: 200px;
+    height: 450px;
+    margin: 10px;
+   background-color: beige;
+}
+.search{
+    padding: 10px;
+}
+.rescard >img{
+    height: 100px;
+    width: 100px;
+    padding: 5px;
+   
+}
+.rescard:hover {
+    border: 1px solid black;
+}
+.rescont{
+    display: flex;
+}
+.rescont {
+  display: grid;
+  grid-template-columns: repeat(auto-fill, minmax(220px, 1fr));
+  gap: 20px;
+}
